Fixed overlays on mobile for profile images

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,8 @@
 /* ==========================================================================
 HTML5 display definitions
 ========================================================================== */
- 
+
 /* * Corrects `block` display not defined in IE 6/7/8/9 and Firefox 3. */
- 
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary { display: block; }
 /* * Corrects `inline-block` display not defined in IE 6/7/8/9 and Firefox 3. */
 audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
@@ -24,7 +23,7 @@ Base
 *    user zoom. */
  
 html { font-size: 100%; /* 1 */
-	-webkit-text-size-adjust: 100%; /* 2 */
+    -webkit-text-size-adjust: 100%; /* 2 */
 -ms-text-size-adjust: 100%; /* 2 */ }
 html, html a { -webkit-font-smoothing: antialiased; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); }
 /* * Addresses `font-family` inconsistency between `textarea` and other form
@@ -115,14 +114,14 @@ fieldset { border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.7
 * 2. Corrects text not wrapping in Firefox 3.
 * 3. Corrects alignment displayed oddly in IE 6/7. */
 legend { border: 0; /* 1 */
-	padding: 0; white-space: normal; /* 2 */
+    padding: 0; white-space: normal; /* 2 */
 *margin-left: -7px; /* 3 */ }
 /* * 1. Corrects font size not being inherited in all browsers.
 * 2. Addresses margins set differently in IE 6/7, Firefox 3+, Safari 5, *    and Chrome.
 * 3. Improves appearance and consistency in all browsers. */
 button, input, select, textarea { font-size: 100%; /* 1 */
-	margin: 0; /* 2 */
-	vertical-align: baseline; /* 3 */
+    margin: 0; /* 2 */
+    vertical-align: baseline; /* 3 */
 *vertical-align: middle; /* 3 */ }
 /* * Addresses Firefox 3+ setting `line-height` on `input` using ` !important` in
 * the UA stylesheet. */
@@ -136,7 +135,7 @@ button, input { line-height: normal; }
 *    Known issue:inner spacing remains in IE 6. */
 button, html input[type="button"], /* 1 */
 input[type="reset"], input[type="submit"] { -webkit-appearance: button; /* 2 */
-	cursor: pointer; /* 3 */
+    cursor: pointer; /* 3 */
 *overflow: visible; /* 4 */ }
 /* * Re-set default cursor for disabled elements. */
 button[disabled], input[disabled] { cursor: default; }
@@ -145,14 +144,14 @@ button[disabled], input[disabled] { cursor: default; }
 * 3. Removes excess padding in IE 7.
 *    Known issue:excess padding remains in IE 6. */
 input[type="checkbox"], input[type="radio"] { box-sizing: border-box; /* 1 */
-	padding: 0; /* 2 */
-	*height: 13px; /* 3 */
+    padding: 0; /* 2 */
+    *height: 13px; /* 3 */
 *width: 13px; /* 3 */ }
 /* * 1. Addresses `appearance` set to `searchfield` in Safari 5 and Chrome.
 * 2. Addresses `box-sizing` set to `border-box` in Safari 5 and Chrome
 *    (include `-moz` to future-proof). */
 input[type="search"] { -webkit-appearance: textfield; /* 1 */
-	-moz-box-sizing: content-box; -webkit-box-sizing: content-box; /* 2 */
+    -moz-box-sizing: content-box; -webkit-box-sizing: content-box; /* 2 */
 box-sizing: content-box; }
 /* * Removes inner padding and search cancel button in Safari 5 and Chrome
 * on OS X. */
@@ -258,8 +257,8 @@ Portfolio
 .effects .img:first-child { margin-left: -15px; }
 .effects .img:last-child { margin-right: 0; }
 .effects .img img { display: block; margin: 0; padding: 0; height: auto; }
-.overlay { display: block; position: absolute; z-index: 20; background: rgba(100, 194, 158, 0.8); overflow: hidden; transition: all 0.5s; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; }
-a.close-overlay { display: block; position: absolute; top: 0; right: 0; z-index: 100; width: 45px; height: 45px; font-size: 20px; font-weight: 700; color: #fff; line-height: 45px; text-align: center; background-color: #000; cursor: pointer; }
+.overlay { display: block; position: absolute; z-index: 20; background: rgba(100, 194, 158, 0.7); overflow: hidden; transition: all 0.5s; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; }
+a.close-overlay { display: block; position: absolute; top: 0; right: 0; z-index: 100; width: 45px; height: 45px; font-size: 25px; font-weight: 700; color: #fff; line-height: 45px; text-align: center; background-color: transparent; cursor: pointer; }
 a.close-overlay.hidden { display: none; }
 a.expand { display: block; position: absolute; z-index: 100; text-align: center; color: #fff; font-weight: 600; font-size: 14px; text-transform: uppercase; line-height: 30px; }
 .overlay-effect .img i { font-size: 30px; }
@@ -267,7 +266,6 @@ a.expand { display: block; position: absolute; z-index: 100; text-align: center;
 .overlay-effect .overlay a.expand { left: 0; right: 0; bottom: 47%; margin: 0 auto -30px auto; }
 .overlay-effect .img.hover .overlay { height: 100%; opacity: 1; }
 .img img { width: -webkit-calc(100% + 40px) !important; width: calc(100% + 40px) !important; -webkit-transition: opacity 0.35s, -webkit-transform 0.35s; transition: opacity 0.35s, transform 0.35s; -moz-transition: opacity 0.35s, -moz-transform 0.35s; -o-transition: opacity 0.35s, -o-transform 0.35s; -webkit-transform: translate3d(-40px, 0, 0); transform: translate3d(-40px, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
-.img:hover img { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); -ms-transform: translate3d(-40px, 0, 0); }
 .designs { position: absolute; left: 0; right: 0; margin-left: auto; margin-right: auto; top: 50px; }
 /* ==========================================================================
 Subscribe
@@ -317,6 +315,16 @@ ul.legals li::after { content: " |"; }
 ul.legals li:last-child::after { content: ""; }
 .legals { text-align: left; }
 .credit { text-align: right; }
+/* ==========================================================================
+Modal
+========================================================================== */
+.modal { display: none; position: fixed; z-index: 1; padding-top: 25vh; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.6); }
+.modal-content { position: relative; background-color: #fefefe; margin: auto; padding: 0; border: 1px solid #272833; width: 80%; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); -webkit-animation-name: animatetop; -webkit-animation-duration: 0.4s; animation-name: animatetop; animation-duration: 0.4s }
+.modal-header { padding: 2px 16px; background-color: #272833; color: white; }
+.modal-body { padding: 2px 16px; }
+.modal-footer { padding: 2px 16px; background-color: #272833; color: white; }
+.modalClose { color: white; float: right; font-size: 28px; font-weight: bold; }
+.modalClose:hover, .modalClose:focus { color: #3dc9b3; text-decoration: none; cursor: pointer; }
 /* ==========================================================================
 FlexSlider Custom CSS
 ========================================================================== */
